# fractal-generator

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  code_cleanup.md  code_cleanup_report.md  code_quality_survey.md  code_report.md  explorer.cmd  fractal-generator-handoff.md  palette_v2.json  pyproject.toml  repo_size_audit.md  repo_structure_audit.md  uf_coloring_algorithms.md
classifier/: __init__.py  corpus_data.py  data.py  data_v4.py  diagnose.py  diagnose_v2.py  eval.py  eval_v2.py  inference.py  model.py  sheet.py  test_deploy_transform_parity.py  train.py  train_mining_head.py  train_v2.py  train_v3.py  train_v4.py  train_v5.py  train_v6.py  train_v7.py  train_wallpaper_resdiag.py  train_wallpaper_v1.py  train_wallpaper_v2.py  train_wallpaper_v3.py
data/: test_palettes.json  test_renders.json
data_large/: README.md
dramatic_palettes/: dramatic-palette-generator-prompt-v2.2.md  dramatic-palette-generator-prompt-v3.1.md  dramatic-test.json  grid_runner.py  validate_palettes.py
labels/: 2026-07-22_native_multibrot_band_v1.json  _smoke_e2e.py  _validate_render_paths.py  blindspot_v6reject_v1.json  campaign1_blind_blind_scores.json  cc_julia_dup_audit.md  jm3_band_v1.json  jm45_band_v1.json  julia-census-readout.md  location_labels.json  location_labels_gather_v6.json  location_labels_julia_ladder_j0.json  location_labels_rev4.json  mining_v3guided_v1.json  palette-family-entropy-trace.md  palette_scores.json  per-mode-signal-read.md  phoenix_grid.json  prompt-beam-profile.md  prompt-guard-corpus-render-path.md  prompt-julia-multibrot-featureless-diagnose.md  prompt-lut-cache.md  prompt-palette-luminance-floor.md  prompt-recolor-at-score-res.md  prompt-recolor-v6-with-76.md  prompt-redundant-field-render-audit.md  prompt-v6-dark-palette-detect.md  prompt-v6-label-integrate-analyze.md  prompt-wallpaper-bootstrap-resume-validate.md  prospect_run1_baserate_R_v1.json  prospect_run1_baserate_v1.json  q4_g_aimed.json  q4_stage1_windows_p2.json  render_mode_pilot_v1.json  render_mode_scale_v1.json  scale_2x2_labelset.json  selector-family-diversity-curve.md  smooth-distance-pass.md  steered_run2_blind_scores.json  steered_v1_2_dive_blind_scores.json  (+3 more)
palette_extractor/: PALETTE_EXTRACTION.md  bench_consistency.py  bench_cycle_closure.py  bench_imbalanced.py  bench_mirror_eval.py  bench_roundtrip_sweep.py  bench_synthetic_eval.py  build_roundtrip_manifest.py  build_wallpaper_manifest.py  check_bytematch.py  eval_palette.py  harness_roundtrip.py  harvest_dedup.py  harvest_gate_measures.py  harvest_stats.py  harvest_test_render.py  harvest_wallpapers.py  palette_extract.py  phase0_mirror_visual.py  test_bytematch.py  test_wallpaper_extraction.py
specs/: REGISTRY.md  (+29 more)
(+1151 files in other folders)
